--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>UMass Philosophy: Help pages</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+Hello world.
+</body>
+</html>
