--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UMass Philosophy: Help pages</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>UMass Philosophy | Help Pages for Website</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-Hello world.
+
+<div id="container">
+<div id="content">
+<p>Hello world</p>
+
+</div>
+</div>
 </body>
 </html>
