--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
 </head>
 <body>
 
-<div id="container">
-<div id="content">
-<p>Hello world</p>
+<!-- <div id="container"> -->
+<!-- <div id="content"> -->
+<div id="wrapper">
+<h1 id="umass-philosophy-website---help-pages">UMass Philosophy Website | Help pages</h1>
 
-</div>
+<p>For the moment, you should only make changes to the Course pages and the Placement pages. For instructions on editing those, click on the corresponding links:</p>
+
+<ul>
+<li><a href="course-pages.html">Course pages</a></li>
+<li><a href="">Placement page</a></li>
+</ul>
+
+
 </div>
 </body>
 </html>
