Updated a few things, including style file.

--- a/course-pages.html
+++ b/course-pages.html
@@ -111,11 +111,11 @@ _Text_: _The Philosophy Book_
 
 <p>You should then make sure to click on the <button>Source</button> button below the &lsquo;Body&rsquo; section, delete any text in the resulting box, and paste the contents of your clipboard.</p>
 
-<p><img src="https://www.dropbox.com/s/xcp8ymsao55igch/Screenshot%202017-04-29%2012.04.15.png?raw=1" alt="Make sure to click the 'Source' button before making changes." /></p>
+<p><img src="img/source-button.png" alt="Make sure to click the 'Source' button before making changes." /></p>
 
 <p>When you are viewing the raw <code>html</code> of the page content, the editing page should look something like this:</p>
 
-<p><img src="https://www.dropbox.com/s/434rs01ca06q33y/Screenshot%202017-04-29%2012.06.04.png?raw=1" alt="Viewing the raw `html` of the page contents" /></p>
+<p><img src="img/raw.png" alt="Viewing the raw `html` of the page contents" /></p>
 
 <p>You can then click <button>Save</button>.</p>
 
@@ -148,14 +148,14 @@ _Text_: _The Philosophy Book_
 <p>At some point before registration for the following semester, we should create a page including future courses. In order to create them, please go to one of the following two pages:</p>
 
 <ul>
-<li><a href="">Future undegraduate courses</a></li>
-<li><a href="">Future graduate courses</a></li>
+<li><a href="http://www.umass.edu/philosophy/future-undergraduate-courses">Future undegraduate courses</a></li>
+<li><a href="http://www.umass.edu/philosophy/future-graduate-courses">Future graduate courses</a></li>
 </ul>
 
 
 <p>After updating that page, you should make sure that they are published, by scrolling to the bottom of the editing page, selecting the <code>Publishing options</code> tab of the last block on that page, and making sure that &lsquo;Published&rsquo; is selected:</p>
 
-<p><img src="https://www.dropbox.com/s/mhn7kmakxucv2cv/Screenshot%202017-04-29%2012.02.05.png?raw=1" alt="Publishing a page" /></p>
+<p><img src="img/published.png" alt="Publishing a page" /></p>
 
 <p>You will need to &lsquo;unpublish&rsquo; this page once the information it contains is migrated to the corresponding &lsquo;Current courses&rsquo; page.</p>
 
@@ -173,7 +173,7 @@ _Text_: _The Philosophy Book_
 
 <p>Before doing that, you should create a page for archiving the last semester&rsquo;s course information. To do so, you should create a new page by clicking on &lsquo;Add content&rsquo; at the top left corner of any page.</p>
 
-<p><img src="https://www.dropbox.com/s/zvmcj7rar2zhh4l/Screenshot%202017-04-29%2012.10.52.png?raw=1" alt="Add content button" /></p>
+<p><img src="img/add-content.png" alt="Add content button" /></p>
 
 <p>You will then see a list of options for the type of content you are adding. You should create a &lsquo;Basic page&rsquo; and paste the raw html in the appropriate place. (Before doing that, remember to click the <button>Source</button> button.)</p>
 
@@ -183,7 +183,7 @@ _Text_: _The Philosophy Book_
 
 <p>The result should look like this:</p>
 
-<p><img src="https://www.dropbox.com/s/qtzp5hf5gyzm00f/Screenshot%202017-04-29%2012.41.32.png?raw=1" alt="Archiving past semesters' courses" /></p>
+<p><img src="img/alias.png" alt="Archiving past semesters' courses" /></p>
 
 <h1 id="example-workflow">Example workflow</h1>
 
@@ -207,6 +207,7 @@ _Text_: _The Philosophy Book_
 <p>For more information about Markdown syntax, you can go to <a href="http://www.markdowntutorial.com">this online tutorial</a><a href="#fnref:2" rev="footnote">&#8617;</a></p></li>
 </ol>
 </div>
+
 
 </div>
 <!-- </div>
