--- a/course-pages.html
+++ b/course-pages.html
@@ -14,7 +14,7 @@
 
 <p>We should maintain a total of <strong>four</strong> separate files per semester. Two of them are for scheduling information (one for undergraduate courses and one for graduate courses) and two of them are for course descriptions (one for undergraduate courses and one for graduate courses).</p>
 
-<p>The files should be organized so that for each semester there&rsquo;s a folder inside the shared <code>courses</code> folder. The folder name should follow the format <code>f1992</code> for both graduate and undergraduate courses from Fall 1992.</p>
+<p>The files should be organized so that for each semester there&rsquo;s a folder inside the shared <code>courses</code> folder. The folder name should follow the format <code>F1992</code> for both graduate and undergraduate courses from Fall 1992.</p>
 
 <h2 id="schedule-information">Schedule information</h2>
 
@@ -208,7 +208,6 @@ An introduction to Western philosophy through the examination of one of the most
 <p>For more information about Markdown syntax, you can go to <a href="http://www.markdowntutorial.com">this online tutorial</a><a href="#fnref:2" rev="footnote">&#8617;</a></p></li>
 </ol>
 </div>
-
 
 </div>
 <!-- </div>
