Undo previous commit; fix broken links; tweak stylesheet for welcome pkg

--- a/welcome/checklists.html
+++ b/welcome/checklists.html
@@ -81,9 +81,9 @@ University email account</a> and start monitoring it on a regular
 basis</li>
 <li><input type="checkbox" />Accept the terms and conditions of your
 employment/funding in SPIRE (<a
-href="../policies#contract">more</a>)</li>
+href="./policies.html#contract">more</a>)</li>
 <li><input type="checkbox" />Sign fellowship or other funding contract,
-if applicable (<a href="../policies#contract">more</a>)</li>
+if applicable (<a href="./policies.html#contract">more</a>)</li>
 <li><input type="checkbox" />Complete the HR hiring packet (if
 applicable) at least two weeks before the beginning of the Fall
 semester</li>
@@ -97,14 +97,15 @@ photo upload website</a> (note that you will need your NetID and
 password for this )</li>
 <li><input type="checkbox" />Register for the proseminar and a
 preliminary set of other courses (<a
-href="../policies#register">more</a>)</li>
+href="./policies.html#registering">more</a>)</li>
 <li><input type="checkbox" /><a
 href="https://www.umass.edu/it/eduroam-setup-guides">Setup eduroam</a>
 on your computer or tablet in order to have access to wireless internet
 on campus</li>
 <li><input type="checkbox" />Familiarize yourself with the <a
 href="https://www.umass.edu/philosophy/philosophy-phd-program">program
-regulations</a></li>
+    regulations</a></li>
+<li><input type="checkbox" />Familiarize yourself with the policies and procedures described on this <a href="./policies.html">page</a></li>
 </ul>
 <h2 id="to-do-during-the-week-of-august-28th">To do during the week of
 August 28th</h2>
