Welcome packet overhaul

--- a/welcome/misc.html
+++ b/welcome/misc.html
@@ -21,6 +21,10 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -31,10 +35,10 @@
   <a href="./index.html">Welcome</a>
   <a href="./checklists.html">Checklists</a>
   <a href="./policies.html">Policies</a>
-  <a href="./misc.html" class="active">Other arrangements</a>
+  <a href="./misc.html" class="active">Etc.</a>
   <a href="./people.html">People</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html">International Students</a>
+  <a href="./international.html">International</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -87,39 +91,14 @@ class="uri">https://www.umass.edu/living/</a>. Family Housing is handled
 at North Village and can be accessed through the same URL. Their phone
 number is (413) 545-3115.</p>
 <p>Other resources for finding housing include local newspapers and on
-bulletin boards. Some online sites to check include:</p>
-<table border="0" cellspacing="0" cellpadding="6" rules="groups" frame="void">
-<colgroup>
-<col  class="org-left" />
-<col  class="org-left" />
-</colgroup>
-<tbody>
-<tr>
-<td class="org-left">
-Craigslist for Western Massachusetts
-</td>
-<td class="org-left">
-<a href="https://westernmass.craigslist.org/">https://westernmass.craigslist.org/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Rent Noho
-</td>
-<td class="org-left">
-<a href="https://www.rentnoho.com/">https://www.rentnoho.com/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Robinson Real Estate Service
-</td>
-<td class="org-left">
-<a href="https://www.robinsonre.com/">https://www.robinsonre.com/</a>
-</td>
-</tr>
-</tbody>
-</table>
+  bulletin boards. Some online sites to check include:</p>
+
+<ul>
+  <li><a href="https://westernmass.craigslist.org/">Craigslist for Western Massachusetts</a></li>
+  <li><a href="https://www.rentnoho.com/">Rent Noho</a></li>
+  <li><a href="https://www.robinsonre.com/">Robinson Real Estate Service</a></li>
+</ul>
+
 <h2 id="travel-information"><a name="travel"></a>Travel information</h2>
 <p>The closest major airport is Bradley International Airport (BDL),
 near Hartford, Connecticut. From there you can get a taxi, Uber, or
