--- a/welcome/people.html
+++ b/welcome/people.html
@@ -21,6 +21,10 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -31,10 +35,10 @@
   <a href="./index.html">Welcome</a>
   <a href="./checklists.html">Checklists</a>
   <a href="./policies.html">Policies</a>
-  <a href="./misc.html">Other arrangements</a>
+  <a href="./misc.html">Etc.</a>
   <a href="./people.html" class="active">People</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html">International Students</a>
+  <a href="./international.html">International</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -54,7 +58,7 @@ function myFunction() {
 <p>Here is a list of people you should know about if you don’t already,
 as well as some information about who is the best person to contact
 depending on what kind of issues you need help with.</p>
-<ol type="1">
+<ul>
 <li><p><strong>Kevin Klement</strong> (<a
 href="mailto:klement@umass.edu">klement@umass.edu</a>), <em>Department
 Chair</em></p>
@@ -71,8 +75,8 @@ to it. The GPD can answer questions concerning degree requirements,
 including required courses, starred papers, etc. and is also happy to
 discuss any other issues related to the graduate program, problems
 relating to it or your ability to succeed in it.</p></li>
-<li><p><strong>Beth Grybko</strong> <a
-href="mailto:bellena@philos.umass.edu">(bellena@philos.umass.edu</a>],
+<li><p><strong>Beth Grybko</strong> (<a
+href="mailto:bellena@philos.umass.edu">bellena@philos.umass.edu</a>),
 <em>Business Manager and Graduate Program Assistant</em></p>
 <p>Beth is the main administrative person in the department, and of the
 graduate program in particular. Beth can answer questions concerning how
@@ -127,6 +131,6 @@ Staneslow.</p></li>
 graduate students in whatever ways they can, academically or otherwise.
 You can find a <a href="https://www.umass.edu/philosophy/faculty">list
 of our current faculty members</a> on our website.</p></li>
-</ol>
+</ul>
 </body>
 </html>
