--- a/welcome/checklists.html
+++ b/welcome/checklists.html
@@ -21,6 +21,10 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -31,10 +35,10 @@
   <a href="./index.html">Welcome</a>
   <a href="./checklists.html" class="active">Checklists</a>
   <a href="./policies.html">Policies</a>
-  <a href="./misc.html">Other arrangements</a>
+  <a href="./misc.html">Etc.</a>
   <a href="./people.html">People</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html">International Students</a>
+  <a href="./international.html">International</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
