--- a/welcome/index.html
+++ b/welcome/index.html
@@ -21,6 +21,9 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
@@ -32,10 +35,10 @@
   <a href="./index.html" class="active">Welcome</a>
   <a href="./checklists.html">Checklists</a>
   <a href="./policies.html">Policies</a>
-  <a href="./misc.html">Other arrangements</a>
+  <a href="./misc.html">Etc.</a>
   <a href="./people.html">People</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html">International Students</a>
+  <a href="./international.html">International</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -79,7 +82,7 @@ a page with <a href="./misc.html">additional information</a> you may
 find helpful as you prepare your move to Amherst, including some
 information about <a href="./misc.html#housing">housing</a>.</p>
 <p>Fall semester begins on <strong>Tuesday, September 5th</strong>, but
-you should make sure to arrive in the area <strong>a week or more before
+you should <strong>make sure to arrive in the area a week or more before
 that</strong>. You are expected on campus for a departmental orientation
 event on <strong>Wednesday, August 30th</strong>. In addition, there is
 a Graduate School orientation event on Friday, September 1st that I
