--- a/welcome/links.html
+++ b/welcome/links.html
@@ -21,6 +21,10 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -32,10 +36,10 @@
   <a href="./index.html">Welcome</a>
   <a href="./checklists.html">Checklists</a>
   <a href="./policies.html">Policies</a>
-  <a href="./misc.html">Other arrangements</a>
+  <a href="./misc.html">Etc.</a>
   <a href="./people.html">People</a>
   <a href="./links.html" class="active">Resources</a>
-  <a href="./international.html">International Students</a>
+  <a href="./international.html">International</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -53,321 +57,90 @@ function myFunction() {
 </script>
 <h1 id="useful-links">Useful Links</h1>
 <h2 id="department-and-program">Department and program</h2>
-<table border="0" cellspacing="0" cellpadding="6" rules="groups" frame="void">
-<colgroup>
-<col  class="org-left" />
-<col  class="org-left" />
-</colgroup>
-<tbody>
-<tr>
-<td class="org-left">
-Department Homepage
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/philosophy">https://www.umass.edu/philosophy</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Faculty list
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/philosophy/faculty">https://www.umass.edu/philosophy/faculty</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Graduate courses
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/philosophy/future-graduate-courses">https://www.umass.edu/philosophy/future-graduate-courses</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Graduate student list
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/philosophy/graduate-students">https://www.umass.edu/philosophy/graduate-students</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Program regulations
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/philosophy/philosophy-phd-program">https://www.umass.edu/philosophy/philosophy-phd-program</a>
-</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="https://www.umass.edu/philosophy">Department
+Homepage</a></li>
+<li><a href="https://www.umass.edu/philosophy/faculty">Faculty
+list</a></li>
+<li><a
+href="https://www.umass.edu/philosophy/future-graduate-courses">Graduate
+courses</a></li>
+<li><a
+href="https://www.umass.edu/philosophy/graduate-students">Graduate
+student list</a></li>
+<li><a
+href="https://www.umass.edu/philosophy/philosophy-phd-program">Program
+regulations</a></li>
+</ul>
 <h2 id="umass-offices-and-information">UMass offices and
 information</h2>
-<table border="0" cellspacing="0" cellpadding="6" rules="groups" frame="void">
-<colgroup>
-<col  class="org-left" />
-<col  class="org-left" />
-</colgroup>
-<tbody>
-<tr>
-<td class="org-left">
-Graduate School
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/gradschool">https://www.umass.edu/gradschool</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Academic Calendar
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/registrar/calendars/academic-calendar">https://www.umass.edu/registrar/calendars/academic-calendar</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Controller’s Office
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/controller">https://www.umass.edu/controller</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Counseling and Psychological Health
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/counseling">https://www.umass.edu/counseling</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Email accounts
-</td>
-<td class="org-left">
-<a href="https://www.it.umass.edu/accounts/activate-your-account">https://www.it.umass.edu/accounts/activate-your-account</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Enrollment info
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/graduate/policies/handbook/enrollment">https://www.umass.edu/graduate/policies/handbook/enrollment</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Excess Express
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/bursar/refunds-and-excess-express">https://www.umass.edu/bursar/refunds-and-excess-express</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Health Services
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/uhs">https://www.umass.edu/uhs</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Human Resources
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/humres">https://www.umass.edu/humres</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Human Resources hiring packets
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/humres/hire-package-graduate-student-employees">https://www.umass.edu/humres/hire-package-graduate-student-employees</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Information Technology (IT)
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/it/">https://www.umass.edu/it/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-International Programs Office
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/ipo/iss">https://www.umass.edu/ipo/iss</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Student short-term loans
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/dean_students/support/loan-program">https://www.umass.edu/dean_students/support/loan-program</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Office of Inclusion and Equity
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/diversity/">https://www.umass.edu/diversity/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Parking Services
-</td>
-<td class="org-left">
-<a href="https://parking.umass.edu">https://parking.umass.edu</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-SPIRE
-</td>
-<td class="org-left">
-<a href="https://www.spire.umass.edu">https://www.spire.umass.edu</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Student Health Benefit Plan
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/uhs/insurance/shbp">https://www.umass.edu/uhs/insurance/shbp</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Student Life “single stop”
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/studentlife/single-stop">https://www.umass.edu/studentlife/single-stop</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-UCards
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/ucard">https://www.umass.edu/ucard</a>
-</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="https://www.umass.edu/gradschool">Graduate School</a></li>
+<li><a
+href="https://www.umass.edu/registrar/calendars/academic-calendar">Academic
+Calendar</a></li>
+<li><a href="https://www.umass.edu/controller">Controller’s
+Office</a></li>
+<li><a href="https://www.umass.edu/counseling">Counseling and
+Psychological Health</a></li>
+<li><a
+href="https://www.it.umass.edu/accounts/activate-your-account">Email
+accounts</a></li>
+<li><a
+href="https://www.umass.edu/graduate/policies/handbook/enrollment">Enrollment
+info</a></li>
+<li><a
+href="https://www.umass.edu/bursar/refunds-and-excess-express">Excess
+Express</a></li>
+<li><a href="https://www.umass.edu/uhs">Health Services</a></li>
+<li><a href="https://www.umass.edu/humres">Human Resources</a></li>
+<li><a
+href="https://www.umass.edu/humres/hire-package-graduate-student-employees">Human
+Resources hiring packets</a></li>
+<li><a href="https://www.umass.edu/it/">Information Technology
+(IT)</a></li>
+<li><a href="https://www.umass.edu/ipo/iss">International Programs
+Office</a></li>
+<li><a
+href="https://www.umass.edu/dean_students/support/loan-program">Student
+short-term loans</a></li>
+<li><a href="https://www.umass.edu/diversity/">Office of Inclusion and
+Equity</a></li>
+<li><a href="https://parking.umass.edu">Parking Services</a></li>
+<li><a href="https://www.spire.umass.edu">SPIRE</a></li>
+<li><a href="https://www.umass.edu/uhs/insurance/shbp">Student Health
+Benefit Plan</a></li>
+<li><a href="https://www.umass.edu/studentlife/single-stop">Student Life
+“single stop”</a></li>
+<li><a href="https://www.umass.edu/ucard">UCards</a></li>
+</ul>
 <h2 id="housing-and-other-community-resources">Housing and other
 community resources</h2>
-<table border="0" cellspacing="0" cellpadding="6" rules="groups" frame="void">
-<colgroup>
-<col  class="org-left" />
-<col  class="org-left" />
-</colgroup>
-<tbody>
-<tr>
-<td class="org-left">
-Amtrak trains
-</td>
-<td class="org-left">
-<a href="https://amtrak.com">https://amtrak.com</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Isenberg free tax service
-</td>
-<td class="org-left">
-<a href="https://www.isenberg.umass.edu/programs/undergraduate/on-campus/majors/accounting/VITA">https://www.isenberg.umass.edu/programs/undergraduate/on-campus/majors/accounting/VITA</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Massachusetts Health Connector
-</td>
-<td class="org-left">
-<a href="https://www.mahealthconnector.org/">https://www.mahealthconnector.org/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Off campus housing site
-</td>
-<td class="org-left">
-<a href="https://offcampushousing.umass.edu/">https://offcampushousing.umass.edu/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-On campus housing site
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/living/">https://www.umass.edu/living/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Peter Pan bus (Northeast U.S.)
-</td>
-<td class="org-left">
-<a href="https://peterpanbus.com">https://peterpanbus.com</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-PVTA buses (Pioneer Valley)
-</td>
-<td class="org-left">
-<a href="https://pvta.com/">https://pvta.com/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Rent Noho
-</td>
-<td class="org-left">
-<a href="https://www.rentnoho.com/">https://www.rentnoho.com/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Robinson Real Estate Service
-</td>
-<td class="org-left">
-<a href="https://www.robinsonre.com/">https://www.robinsonre.com/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-UMass local bus schedules
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/transportation/pvta-route-schedules">https://www.umass.edu/transportation/pvta-route-schedules</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Western Massachusetts Craigslist
-</td>
-<td class="org-left">
-<a href="https://westernmass.craigslist.org/">https://westernmass.craigslist.org/</a>
-</td>
-</tr>
-<tr>
-<td class="org-left">
-Visitor information
-</td>
-<td class="org-left">
-<a href="https://www.umass.edu/parents/visiting-amherst">https://www.umass.edu/parents/visiting-amherst</a>
-</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="https://amtrak.com">Amtrak trains</a></li>
+<li><a
+href="https://www.isenberg.umass.edu/programs/undergraduate/on-campus/majors/accounting/VITA">Isenberg
+free tax service</a></li>
+<li><a href="https://www.mahealthconnector.org/">Massachusetts Health
+Connector</a></li>
+<li><a href="https://offcampushousing.umass.edu/">Off campus housing
+site</a></li>
+<li><a href="https://www.umass.edu/living/">On campus housing
+site</a></li>
+<li><a href="https://peterpanbus.com">Peter Pan bus (Northeast
+U.S.)</a></li>
+<li><a href="https://pvta.com/">PVTA buses (Pioneer Valley)</a></li>
+<li><a href="https://www.rentnoho.com/">Rent Noho</a></li>
+<li><a href="https://www.robinsonre.com/">Robinson Real Estate
+Service</a></li>
+<li><a
+href="https://www.umass.edu/transportation/pvta-route-schedules">UMass
+local bus schedules</a></li>
+<li><a href="https://westernmass.craigslist.org/">Western Massachusetts
+Craigslist</a></li>
+<li><a href="https://www.umass.edu/parents/visiting-amherst">Visitor
+information</a></li>
+</ul>
+
 </body>
 </html>
